# EserciziC

./: CMakeLists.txt  README.md  bancomat.c  es5.c  es7.c  es8.c  main.c
Bancomat/: bancomat.c
Esercizio1/: es1.c  es2.c  es3.c  es4.c  es6.c  es9.c
Esercizio2/: es1.c  es2.c  es3.c  es4.c  es5.c  es6.c
Esercizio3/: camping1.c  camping2.c
